--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.env
 # Created by https://www.gitignore.io/api/java,macos,java-web,intellij+all,maven
 # Edit at https://www.gitignore.io/?templates=java,macos,java-web,intellij+all,maven
 
